<resources>
    <string name="app_name" translatable="false">Help City</string>
    <string name="welcome">Welcome Back</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="note_not_edited">Note not edited</string>
    <string name="note">Note</string>
    <string name="hint_note">Note...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Note not saved because it is empty</string>
    <string name="notes">Notes</string>
    <string name="errorNote">Note not created</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create_note">Create Note</string>
    <string name="new_note">New Note</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="search_note">Search Note</string>
    <string name="all_notes_cleared">All notes have been cleared</string>
    <string name="yes">Yes</string>
    <string name="note_deleted">Note deleted</string>
    <string name="no">No</string>
    <string name="delete_everything">Delete all notes?</string>
    <string name="delete_everything_confirmation">Are you sure you want to delete everything?</string>
    <string name="note_updated">Note updated</string>
    <string name="title_activity_map">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="lat_long_snippet" translatable="false">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">POI</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="insert_all_data">Please insert all data</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_validation">Please enter your email and password</string>
    <string name="login_success">Successful Login</string>
    <string name="logout_success">Successful Logout</string>
    <string name="new_occurrence">New Occurrence</string>
    <string name="add_occurrence">Add Occurrence</string>
    <string name="type">Type</string>
    <string name="uploadImages">Set your image</string>
    <string name="msg_loading">Loading...</string>
    <string name="buffering_string" translatable="false">Buffering&#8230;</string>
    <string name="toast_message" translatable="false">Playback completed.</string>
    <string name="upload_file">Upload file</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>
    <string name="remove_or_change">Remove/Change Image</string>
    <string name="errorLogin">Error doing the Login</string>
    <string name="loginToGoMap">You must have to login to navigate to the Map Section</string>
    <string name="blankFields">Please submit the blank fields</string>
    <string name="occurrence_create_success">Occurrence Created with Success</string>
    <string name="occurrence_create_error">Error creating occurrence</string>
    <string name="search">Search</string>
    <string name="canceled">Operation cancelled!</string>
    <string name="cancel">Cancel</string>
    <string name="filter_occorrences">Filter Occurrences</string>
    <string name="type_occurrence">Type of Occurrence</string>
    <string name="traffic">Traffic</string>
    <string name="distance_from_you">Distance</string>
    <string name="range_of">Range of</string>
    <string name="meters">Meters</string>
    <string name="my_occurrences">My Occurrences</string>
    <string name="occurrence_deleted">Occurrence Deleted with Success</string>
    <string name="occurrences_not_found">Occurrences Not Founded</string>
    <string name="pick_image">Pick Image</string>
    <string name="occurrence_description">Occurrence Description</string>
    <string name="update_occurrence">Update Occurrence Details</string>
    <string name="update_image">Update Image</string>
    <string name="occurrence_updated_success">Occurrence Updated with Success</string>
    <string name="occurrence_updated_error">Error updating Occurrence Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notifications">Receive Notifications</string>
    <string name="enable_notifications">Enable alert notifications</string>
    <string name="choose_occurrence_type_notifications">Occurrences type to be notified</string>
    <string name="source_code">Source Code</string>

    <!--Notification Strings-->
    <string name="channel_name">Be careful!</string>
    <string name="content_text">You just entered in dangerous area!</string>
    <string name="notification_channel_description">Help City Status Notification</string>
    <string name="summary" translatable="false">summary</string>

    <!--Strings for geofence-->
    <string name="geofence_not_available">It wasn\'t possible to select a warning occurrence.</string>
    <string name="geofence_too_many">Too many occurrence areas.</string>
    <string name="geofence_pending">Too many requests for warning occurrence.</string>
    <string name="geofence_range">Geofence Range</string>

    <!--Information button text-->
    <string name="too_bright">I see it\'s a very sunny day today! We recommend the use of sunglasses to avoid future sight problems</string>
    <string name="not_too_bright">The sun is not too strong today.</string>
</resources>