<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/enable_notifications" />

        <ListPreference
            android:entries="@array/Types"
            android:entryValues="@array/Types"
            android:key="list_preference"
            android:title="@string/choose_occurrence_type_notifications" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Github Repository">

    </PreferenceCategory>
    <Preference
        app:key="webpage"
        app:title="@string/source_code">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/helderpgoncalves/HelpCity" />
    </Preference>

</PreferenceScreen>
