<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_occorrences"
        android:textColor="#000"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/filter_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_occurrence"
            android:textColor="#000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/traffic"
            android:textColor="#000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="TODO"
            android:textColor="#000"
            android:textSize="16sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/order_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_from_you"
            android:textColor="#000"
            android:textSize="16sp" />


        <RadioButton
            android:id="@+id/fiveKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="5 KM"
            android:textColor="#000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/tenKM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="10 KM"
            android:textColor="#000"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/moreKM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="15 KM"
            android:textColor="#000"
            android:textSize="16sp" />
    </RadioGroup>
</LinearLayout>