<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/preto_background"    tools:context=".NewNoteActivity">    <androidx.appcompat.widget.Toolbar        android:id="@+id/new_note_toolbar"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@color/cor_laranja"        android:minHeight="?attr/actionBarSize"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:title="@string/new_note"        app:titleTextColor="@color/white"/>    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/new_note_title_label"        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_margin="16dp"        android:background="@color/white"        android:hint="@string/title"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/new_note_toolbar">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/new_note_title"            android:background="@color/white"            android:layout_width="match_parent"            android:layout_height="wrap_content" />    </com.google.android.material.textfield.TextInputLayout>    <com.google.android.material.textfield.TextInputLayout        android:id="@+id/new_note_description_label"        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginLeft="16dp"        android:layout_marginTop="16dp"        android:layout_marginRight="16dp"        android:hint="@string/description"        android:inputType="textMultiLine"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/new_note_title_label">        <com.google.android.material.textfield.TextInputEditText            android:id="@+id/new_note_description"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:background="@color/white"/>    </com.google.android.material.textfield.TextInputLayout>    <Button        android:id="@+id/new_note_button"        android:layout_height="wrap_content"        android:layout_width="match_parent"        android:layout_marginLeft="16dp"        android:layout_marginTop="16dp"        android:layout_marginRight="16dp"        android:background="@color/cor_do_logo"        android:text="@string/add_note"        app:layout_constraintEnd_toEndOf="@+id/new_note_description_label"        app:layout_constraintStart_toStartOf="@+id/new_note_description_label"        app:layout_constraintTop_toBottomOf="@+id/new_note_description_label" /></androidx.constraintlayout.widget.ConstraintLayout>