<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto_background"
    tools:context=".NewOccurrenceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_occurrence_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cor_laranja"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/new_occurrence"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/new_occurrence_toolbar"
        android:src="@drawable/ic_baseline_image_24"/>

    <Button
        android:id="@+id/pickImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cor_do_logo"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_baseline_file_upload_24"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/preview"
        android:text="Pick Image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_occurrence_type_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:hint="@string/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_occurrence_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_occurrence_description_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_occurrence_type_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_occurrence_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/new_occurrence_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/cor_do_logo"
        android:text="@string/add_occurrence"
        app:layout_constraintEnd_toEndOf="@+id/new_occurrence_description_label"
        app:layout_constraintStart_toStartOf="@+id/new_occurrence_description_label"
        app:layout_constraintTop_toBottomOf="@+id/new_occurrence_description_label" />
</androidx.constraintlayout.widget.ConstraintLayout>